--- a/menu/menu.html
+++ b/menu/menu.html
@@ -8,20 +8,41 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>
-    <div class="row">
+    <div class="container-fluid">
+        <div class="row mt-2">
+            <div class="col-1">
 
-        <div class="col-3">
+                <button class="boton" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">
 
-            <button class="boton" type="button" data-bs-toggle="collapse" data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">
-
-            </button>
-
+                </button>
+            </div>
             <div class="col">
-                <div class="collapse " id="multiCollapseExample2">
-                    <div class="card card-body">
-                        Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-                    </div>
-                </div>
+                <div class="tablaPosicion"></div>
+            </div>
+            <div class="col-3">
+
+            </div>
+        </div>
+        <div class="row m-auto">
+            <div class="col">
+                <img class="juegos" src="img/juegos.jpg" alt="...">
+            </div>
+            <div class="col">
+                <img class="juegos" src="img/juegos.jpg" alt="...">
+            </div>
+            <div class="col">
+                <img class="juegos" src="img/juegos.jpg" alt="...">
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col">
+        <div class="collapse" id="multiCollapseExample2">
+            <div class="card-usuario">
+                <p>
+                    Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.mi mama  me mima mi mama me mima mi mama me mima mi mama me mima 
+                </p>
             </div>
         </div>
     </div>
