--- a/PROYECTO-MJC memoorize/menu-niveles/index.html
+++ b/PROYECTO-MJC memoorize/menu-niveles/index.html
@@ -8,7 +8,45 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <div class="logo">
+            <img src="images/fondo.jpg" alt="">
+        </div>
+        <div class="container-nivel ">
+            <div class="row">
+                <div class="col-3">
+                    <div class="niveles"></div>  
+                </div>
+                <div class="col-3">
+                    <div class="niveles"></div>
+                </div>
+                <div class="col-3" >
+                    <div class="niveles"></div>
+                </div>
+                <div class="col-3" >
+                    <div class="niveles"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-nivel">
+            <div class="row">
+                <div class="col-3">
+                    <div class="niveles"></div>  
+                </div>
+                <div class="col-3">
+                    <div class="niveles"></div>
+                </div>
+                <div class="col-3" >
+                    <div class="niveles"></div>
+                </div>
+                <div class="col-3" >
+                    <div class="niveles"></div>
+                </div>
+            </div>
+        </div>
+
+        
+    </div>
     
 </body>
 </html>
