--- a/PROYECTO-MJC memoorize/menu/menu.html
+++ b/PROYECTO-MJC memoorize/menu/menu.html
@@ -20,7 +20,7 @@
                 <div class="tablaPosicion"></div>
             </div>
             <div class="col-3">
-
+                jsjdsj
             </div>
         </div>
         <div class="row m-auto">
