--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -9,21 +9,27 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>  
+    <div class="container-fluid">
+        <audio id="miCancion" src="audio/sonidoFondo.mp3" preload="auto"></audio>
+        
+        <button id="playButton">
+            <img class="imgSonido" src="img/icon/noSonido.png" alt="">
+        </button>
 
-    <audio id="miCancion" src="audio/sonidoFondo.mp3" preload="auto"></audio>
-    <button id="playButton"><img src="img/icon/" alt=""></button>
+        <div class="col-12">
+            <div class="col-4 m-auto">
+                <img class="imgLogo" src="img/logo/MJC.png" alt="">
+            </div>
 
-    <div class="container">
-        <div>
-            <img src="MJC.png" alt="">
+            <div class="col-4 m-auto">
+                <a class="btn btnJugar" href="login/index.html">
+                    <h3 class="btnText">
+                        jugar 
+                    </h3>  
+                </a>
+            </div>
         </div>
-        <a class="btn btnJugar" href="login/index.html">
-            <h3 class="btnText">
-                jugar 
-            </h3>  
-        </a>
     </div>
-
     <script src="js/sonido.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>    
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
