--- a/PROYECTO-MJC memoorize/menu-niveles/index.html
+++ b/PROYECTO-MJC memoorize/menu-niveles/index.html
@@ -3,44 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Menu Niveles</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="icon" href="images/rompe.png" type="image/icon">
 </head>
 <body>
     <div class="container">
         <div class="logo">
-            <img src="images/fondo.jpg" alt="">
+            <img src="images/r.png" alt="">
         </div>
         <div class="container-nivel ">
             <div class="row">
                 <div class="col-3">
-                    <div class="niveles"></div>  
+                    <div class="niveles  animacion"> <h1 class="o-l">1</h1><h6 class="ol-a">LEVEL</h6></div>  
                 </div>
                 <div class="col-3">
-                    <div class="niveles"></div>
+                    <div class="niveles animacion"><h1 class="o-l">2</h1><h6 class="ol-a">LEVEL</h6></div>
                 </div>
                 <div class="col-3" >
-                    <div class="niveles"></div>
+                    <div class="niveles animacion"><h1 class="o-l">3</h1><h6 class="ol-a">LEVEL</h6></div>
                 </div>
                 <div class="col-3" >
-                    <div class="niveles"></div>
+                    <div class="niveles animacion"><h1 class="o-l">4</h1><h6 class="ol-a">LEVEL</h6></div>
                 </div>
             </div>
         </div>
         <div class="container-nivel">
             <div class="row">
                 <div class="col-3">
-                    <div class="niveles"></div>  
+                    <div class="niveles animacion"><h1 class="o-l">5</h1><h6 class="ol-a">LEVEL</h6></div>  
                 </div>
                 <div class="col-3">
-                    <div class="niveles"></div>
+                    <div class="niveles animacion"><h1 class="o-l">6</h1><h6 class="ol-a">LEVEL</h6></div>
                 </div>
                 <div class="col-3" >
-                    <div class="niveles"></div>
+                    <div class="niveles animacion"><h1 class="o-l">7</h1><h6 class="ol-a">LEVEL</h6></div>
                 </div>
                 <div class="col-3" >
-                    <div class="niveles"></div>
+                    <div class="niveles animacion"><h1 class="o-l">8</h1><h6 class="ol-a">LEVEL</h6></div>
                 </div>
             </div>
         </div>
