--- a/dificultad/menuNiveles/nivelesNumeros.html
+++ b/dificultad/menuNiveles/nivelesNumeros.html
@@ -36,6 +36,12 @@
                         <h6 class="ol-a">LEVEL</h6>
                     </div>
                 </div>
+                <div class="col-3">
+                    <div class="niveles animacion locked">
+                        <h1 class="o-l">3</h1>
+                        <h6 class="ol-a">LEVEL</h6>
+                    </div>
+                </div>
             </div>
 
         </div>
