--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/nivelesNumero.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/nivelesNumero.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="../img/logoN.png" alt="" srcset="">
+            <img src="../img/r.png" alt="" srcset="">
         </div>
         <div class="container-nivel ">
             <div class="row">
