--- a/PROYECTO-MJC memoorize/dificultad-rompe/index.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="img/logoN.png" alt="" srcset="">
+        <img src="img/r.png" alt="" srcset="">
     </div>
     <div class="container">
             <a href="menuNiveles/nivelesNumero.html" class="botones animacion btn">
@@ -20,12 +20,17 @@
             </a>
 
             </button>
-            <button class="botones animacion">
-                <div class="letra">Medio</div>
-            </button>
-            <button class="botones animacion">
-                 <div class="letra">Dificil</div>
-            </button>
+            <a href="menuNiveles/nivelesNumero.html" class="botones animacion btn">
+                <div class="letra">Medio
+                
+                </div>
+            </a>
+
+            <a href="menuNiveles/nivelesNumero.html" class="botones animacion btn">
+                <div class="letra">Dificil
+                
+                </div>
+            </a>
     </div>
 </body>
     <script src="js/script.js"></script>
