agregar mensaje anes del juego

--- a/dificultad/index.html
+++ b/dificultad/index.html
@@ -13,10 +13,11 @@
         <img src="img/logoN.png" alt="" srcset="">
     </div>
     <div class="container">
-            <button class="botones animacion">
+        
+            <a href="menuNiveles/nivelesNumero.html " class="btn botones animacion">
                 <div class="letra">Facil</div>
 
-            </button>
+            </a>
             <button class="botones animacion">
                 <div class="letra">Medio</div>
             </button>
