--- a/PROYECTO-MJC memoorize/menu/menu.html
+++ b/PROYECTO-MJC memoorize/menu/menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MJC memorize</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
@@ -19,10 +19,34 @@
             </div>
             <div class="col-8"></div>
             <div class="col-2">
-                <button id="configuracion" >
+                <button id="configuracionBtn" data-bs-toggle="modal" data-bs-target="#configuracion" >
                     <img class="imgConfiguracion" src="../img/icon/configuracion.png" alt="">
                 </button>
             </div>
+        </div>  
+    </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="configuracion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-xl">
+        <div id="cuerpo" class="modal-content">
+            <div class="modal-body">
+                <button type="button" class="btn-close close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="col-12 row">
+                    <h1>
+                        configuracion
+                    </h1>
+                    <div class="col-4">
+                        <h4>musica</h4>
+                    </div>
+                    <div class="col-8">
+                        
+                    </div>
+                </div>
+                
+            </div>
+        </div>
         </div>
     </div>
 
