--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -19,10 +19,10 @@
             <form action="" method="post" class="row g-3">
                 <div class="logoForm col-md-6">
                     <img src="../img/logo/MJC.png" alt="">
+                    <h4 class="text">Inicio de Sesion</h4>
                 </div>
                 <div class="col-md-11 inputIcon">
-                    <label for="validationCustom01" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                    <input type="email" class="form-control input" id="emailLogin" placeholder="Gmail" required>
                     <span id="icon"> 
                         <img src="../img/icon/user.png" alt="">
                     </span>
@@ -32,8 +32,7 @@
                 </div>
             
                 <div class="col-md-11 inputIcon">
-                    <label for="validationCustom01" class="form-label">First name</label>
-                    <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
+                    <input type="password" class="form-control input" id="validationCustom01" placeholder="Contraseña" required>
                     <span id="icon"> 
                         <img src="../img/icon/password.png" alt="">
                     </span>
@@ -43,13 +42,33 @@
                 </div>
 
                 <div class="col-12">
-                    <button class="btn btnLogin" type="submit">Submit form</button>
+                    <button class="btn btnLogin" type="submit">
+                        <h6 class="text">Iniciar Sesion</h6>
+                    </button>
+                </div>
+                <div class="col-md-12 row m-auto">
+                    <div class="col-md-5 linea"></div>
+                    <div class="col-md-2">
+                        <h5 class="text">or</h5>
+                    </div>
+                    <div class="col-md-5 linea"></div>
+                </div>
+                <div class="col-12 row">
+                    <div class="col-md-4 logoRedes">
+                        <img class="facebook" src="../img/icon/facebook.png" alt="">
+                    </div>
+                    <div class="col-md-4 logoRedes">
+                        <img class="gitHub" src="../img/icon/github.png" alt="">
+                    </div>
+                    <div class="col-md-4 logoRedes">
+                        <img class="" src="" alt="">
+                    </div>
                 </div>
             </form>
         </div>        
     </div>
     
-    <script src="../js/sonido.js"></script>
+    <script src="js/sonido.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>    
     <script src="../bootstrap/js/bootstrap.bundle.js"></script>
 </body>
