--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -40,6 +40,9 @@
                       Looks good!
                     </div>
                 </div>
+                <div class="col-12">
+                    <a href="">olvidaste tu contraseña</a>
+                </div>
 
                 <div class="col-12">
                     <button class="btn btnLogin" type="submit">
@@ -61,8 +64,11 @@
                         <img class="gitHub" src="../img/icon/github.png" alt="">
                     </div>
                     <div class="col-md-4 logoRedes">
-                        <img class="" src="" alt="">
+                        <img class="" src="../img/icon/google.png" alt="">
                     </div>
+                </div>
+                <div class="col-12">
+                    <p class="textCrear">¿No tienes una cuenta? <a href="">Crear Cuenta</a></p>
                 </div>
             </form>
         </div>        
