jesus actualizo el login

--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -18,7 +18,9 @@
         <div id="formulario">
             <form action="" method="post" class="row g-3">
                 <div class="logoForm col-md-6">
-                    <img src="../img/logo/MJC.png" alt="">
+                    <center>
+                        <img src="../img/logo/MJClogin.png" alt="">
+                    </center>
                     <h4 class="text">Inicio de Sesion</h4>
                 </div>
                 <div class="col-md-11 inputIcon">
@@ -40,14 +42,16 @@
                       Looks good!
                     </div>
                 </div>
-                <div class="col-12">
-                    <a href="">olvidaste tu contraseña</a>
+                <div class="col-12 textOlvide">
+                    <a href="">¿olvidaste tu contraseña?</a>
                 </div>
 
                 <div class="col-12">
-                    <button class="btn btnLogin" type="submit">
-                        <h6 class="text">Iniciar Sesion</h6>
-                    </button>
+                    <center>
+                        <button class="btn btnLogin" type="submit">
+                            <h6 class="text">Iniciar Sesion</h6>
+                        </button>
+                    </center>
                 </div>
                 <div class="col-md-12 row m-auto">
                     <div class="col-md-5 linea"></div>
