--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="60">
     <title>MJC memorize</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
@@ -43,11 +44,12 @@
                     </div>
                 </div>
                 <div class="col-12 textOlvide">
-                    <a href="">¿olvidaste tu contraseña?</a>
+                    <a href="recuperar/recuperar.html">¿olvidaste tu contraseña?</a>
                 </div>
 
                 <div class="col-12">
                     <center>
+                        <form class="container" action="send.php" method="post"></form>
                         <button class="btn btnLogin" type="submit">
                             <h6 class="text">Iniciar Sesion</h6>
                         </button>
@@ -72,7 +74,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="textCrear">¿No tienes una cuenta? <a href="">Crear Cuenta</a></p>
+                    <p class="textCrear">¿No tienes una cuenta? <a href="resgistrate/index.html">Crear Cuenta</a></p>
                 </div>
             </form>
         </div>        
