--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJC memorize</title>
+    <link rel="icon" href="../img/logo/MJC.png" type="image/icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
@@ -72,7 +73,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="textCrear">¿No tienes una cuenta? <a href="">Crear Cuenta</a></p>
+                    <p class="textCrear">¿No tienes una cuenta? <a href="../login/resgistrate/index.html">Crear Cuenta</a></p>
                 </div>
             </form>
         </div>        
