--- a/PROYECTO-MJC memoorize/dificultad-QuizUp/menuNiveles/explicarJuego/explicacion.html
+++ b/PROYECTO-MJC memoorize/dificultad-QuizUp/menuNiveles/explicarJuego/explicacion.html
@@ -13,7 +13,9 @@
         <img src="../../img/logoN.png">
     </div>
     <div class="container">
-       <h1>hola</h1>
+        <div class="titulo">
+            <h1>¿Como jugar?</h1>
+        </div>
     </div>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
