login ya casi finalizado

--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -19,15 +19,19 @@
 
         <div class="col-12">
             <div class="col-4 m-auto">
-                <img class="imgLogo" src="img/logo/MJC.png" alt="">
+                <center>
+                    <img class="imgLogo" src="img/logo/MJC.png" alt="">
+                </center>
             </div>
 
             <div class="col-4 m-auto">
-                <a class="btn btnJugar" href="login/index.html">
-                    <h3 class="btnText">
-                        JUGAR 
-                    </h3>  
-                </a>
+                <center>   
+                    <a class="btn btnJugar m-auto" href="login/index.html">
+                        <h3 class="btnText">
+                            JUGAR 
+                        </h3>  
+                    </a>
+                </center>
             </div>
         </div>
     </div>
