--- a/PROYECTO-MJC memoorize/dificultad-OrderNumbers/menuNiveles/explicarJuego/explicacion.html
+++ b/PROYECTO-MJC memoorize/dificultad-OrderNumbers/menuNiveles/explicarJuego/explicacion.html
@@ -13,7 +13,7 @@
         <img src="../../img/logoN.png">
     </div>
     <div class="container">
-       <h1>hola</h1>
+       <div class="titulo">¿Como jugar?</div>
     </div>
     <script src="../../bootstrap/js/bootstrap.js"></script>
     <script src="../../bootstrap/js/bootstrap.bundle.js"></script>
