--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-12 textOlvide">
-                    <a href="recuperar/recuperar.html">¿olvidaste tu contraseña?</a>
+                    <a href="recuperar/index.html">¿olvidaste tu contraseña?</a>
                 </div>
 
                 <div class="col-12">
