Actualizacion imagenes y sonido al juego numeros

--- a/PROYECTO-MJC memoorize/dificultad-rompe/index.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="img/r.png" alt="" srcset="">
+        <img src="img/logo2.png" alt="" srcset="">
     </div>
     <div class="container">
             <a href="menuNiveles/nivelesNumero.html" class="botones animacion btn">
