--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -50,9 +50,13 @@
 
                 <div class="col-12">
                     <center>
-                        <button class="btn btnLogin" type="submit">
+                        <!--<button class="btn btnLogin" type="submit" >
                             <h6 class="text">Iniciar Sesion</h6>
                         </button>
+                        -->
+                        <a href="../menu/bar.html" class="btn btnLogin">
+                            <h6 class="text">Iniciar Sesion</h6>
+                        </a>
                     </center>
                 </div>
 
