--- a/PROYECTO-MJC memoorize/menu/bar.html
+++ b/PROYECTO-MJC memoorize/menu/bar.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="progress-container">
-        <div class="progress-bar" id="progress-bar"></div>
+    <div id="containere">
+        <div id="loading-bar"></div>
     </div>
-    <script src="js/script.js"></script>
+    
+    <script src="js/bar.js"></script>
 </body>
 </html>
