Cambio de fondo del menu con un nuevo logo del juego de preguntas

--- a/PROYECTO-MJC memoorize/menu/menu.html
+++ b/PROYECTO-MJC memoorize/menu/menu.html
@@ -30,7 +30,7 @@
                     <div class="col-auto">
                         <a href="../dificultad-rompe/index.html">
                         <button class="btn btn-custom game-button" onclick="navigateToGame(1)" style="margin-top: 200px; border: none;">
-                            <img src="img/r.png" alt="Juego 1" class="game-logo">
+                            <img src="img/logo2.png" alt="Juego 1" class="game-logo">
                             
                         </button>
                     </a>
@@ -42,7 +42,7 @@
                     </div>
                     <div class="col-auto">
                         <button class="btn btn-custom game-button" onclick="navigateToGame(3)" style="margin-top: 200px; border: none;"> 
-                            <img src="img/mrr.png" alt="Juego 3" class="game-logo">
+                            <img src="img/juegopre1.png" alt="Juego 3" class="game-logo">
                         </button>
                     </div>
                 </div>
