--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Facil/1.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Facil/1.html
@@ -28,6 +28,7 @@
                 </div>
                 <div class="col-3">
                     <div class="nivel animacion locked " >
+                        <a href="../../LEVEL 1/index.html" class="btn botones animacion"></a>
                         <h1 class="o-l">2</h1>
                         <h6 class="ol-a">LEVEL</h6>
 
@@ -35,6 +36,7 @@
                 </div>
                 <div class="col-3">
                     <div class="nivel animacion locked">
+                        <a href="../../LEVEL 1/index.html" class="btn botones animacion"></a>
                         <h1 class="o-l">3</h1>
                         <h6 class="ol-a">LEVEL</h6>
                     </div>
