Charry hizo los niveles de rompe cabezas

--- a/PROYECTO-MJC memoorize/dificultad-rompe/index.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/index.html
@@ -13,7 +13,7 @@
         <img src="img/logo2.png" alt="" srcset="">
     </div>
     <div class="container">
-            <a href="menuNiveles/Facil/1.html" class="botones animacion btn">
+            <a href="menuNiveles/Facil/facil.html" class="botones animacion btn">
                 <div class="letra">Facil
                 
                 </div>
