--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJC memorize</title>
     <link rel="icon" href="img/logo/MJC.png" type="image/icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>  
@@ -26,7 +26,7 @@
 
             <div class="col-4 m-auto">
                 <center>   
-                    <a class="btn btnJugar m-auto" href="login/index.html">
+                    <a class="btn btnJugar m-auto" href="login/bar.html">
                         <h3 class="btnText">
                             JUGAR 
                         </h3>  
