--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-12 textOlvide">
-                    <a href="recuperar/index.html">¿olvidaste tu contraseña?</a>
+                    <a href="recuperar/bar.html">¿olvidaste tu contraseña?</a>
                 </div>
 
                 <div class="col-12">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="textCrear">¿No tienes una cuenta? <a href="resgistrate/index.html">Crear Cuenta</a></p>
+                    <p class="textCrear">¿No tienes una cuenta? <a href="resgistrate/bar.html">Crear Cuenta</a></p>
                 </div>
             </form>
         </div>        
