--- a/PROYECTO-MJC memoorize/menu/bar.html
+++ b/PROYECTO-MJC memoorize/menu/bar.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga</title>
+    <link rel="stylesheet" href="css/bar.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="containere">
-        <div id="loading-bar"></div>
+    <div class="center col">
+        <div>
+            <center>
+                <img class="imgLogo" src="../img/logo/MJC.png" alt="">
+            </center>   
+        </div>
+        <div class="m-auto" id="containere">
+            <div id="loading-bar"></div>
+        </div>
     </div>
-    
+
     <script src="js/bar.js"></script>
 </body>
-</html>
+</html>     
