--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJC memorize</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/modal.css">
-    <link rel="stylesheet" href="css/offcanvas.css">
+    <link rel="stylesheet" href="../css/modal.css">
+    <link rel="stylesheet" href="../css/offcanvas.css">
+    <link rel="stylesheet" href="../css/bar.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.min.css">
 </head>   
@@ -20,7 +21,7 @@
                 </button>
 
                 <button id="usuarioBtn" data-bs-toggle="offcanvas" data-bs-target="#usuario" aria-controls="offcanvasExample">
-                    <i class="fa-solid fa-user-astronaut"></i>
+                    <img class="imgSonido" src="../img/icon/usuario.png" alt="">
                 </button>
             </div>
             <div class="col-10">
@@ -91,17 +92,6 @@
                         </div>
                     </div>
                     
-                    <div class="col-12 row">
-                        <div id="iconVolumen" class="col-1">
-                            
-                        </div>
-                        <div class="col-9">
-                            <input class="slider" type="range" min="0" max="1" step="0.01" id="volume">
-                        </div>
-                        <div class="col-2">
-                            <h4>Juego</h4>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
