--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -45,9 +45,11 @@
                      
                     </div>
                     <div class="col-auto">
-                        <button class="btn btn-custom game-button" onclick="navigateToGame(3)" style="margin-top: 200px; border: none;"> 
-                            <img src="img/juegopre1.png" alt="Juego 3" class="game-logo">
-                        </button>
+                        <a href="../juegos/quiz/bar.html">
+                            <button class="btn btn-custom game-button" onclick="navigateToGame(3)" style="margin-top: 200px; border: none;"> 
+                                <img src="img/juegopre1.png" alt="Juego 3" class="game-logo">
+                            </button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -99,8 +101,8 @@
     </div>
 
     <audio id="miCancion" preload="auto" loop>
-                    <source src="../audio/sonidoFondo.mp3" type="audio/mpeg">
-                </audio>
+        <source src="../audio/sonidoFondo.mp3" type="audio/mpeg">
+    </audio>
 
     <script src="js/sonido.js"></script>
     <script src="../bootstrap/js/bootstrap.js"></script>    
