--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -17,11 +17,9 @@
             <img class="imgSonido" src="img/icon/noSonido.png" alt="">
         </button>
 
-        <div class="col-12">
+        <div class="col-12 centrar">
             <div class="col-4 m-auto">
-                <center>
-                    <img class="imgLogo" src="img/logo/MJC.png" alt="">
-                </center>
+                <img class="imgLogo m-auto" src="img/logo/MJC.png" alt="">
             </div>
 
             <div class="col-4 m-auto">
