--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -25,16 +25,15 @@
                 </button>
             </div>
             <div class="col-10">
-
                 <!-- Botones con imágenes dentro -->
-                <div class="row justify-content-center">
+                <div class="row justify-content-center scrolle">
                     <div class="col-auto">
                         <a href="../dificultad-rompe/index.html">
                         <button class="btn btn-custom game-button" onclick="navigateToGame(1)" style="margin-top: 200px; border: none;">
                             <img src="img/logo2.png" alt="Juego 1" class="game-logo">
                             
                         </button>
-                    </a>
+                        </a>
                     </div>
                     <div class="col-auto">
                         <a href="../dificultad-OrderNumbers/index.html">
@@ -42,7 +41,6 @@
                                 <img src="img/logoN.png" alt="Juego 2" class="game-logo">
                             </button>
                         </a>
-                     
                     </div>
                     <div class="col-auto">
                         <a href="../juegos/quiz/bar.html">
