--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Facil/Niveles/LEVEL 1/index.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Facil/Niveles/LEVEL 1/index.html
@@ -41,6 +41,15 @@
     <h3>VISUALIZA ESTA IMAGEN</h3>
     <img src="icono log/images.jpg" alt="Imagen temporal" id="imagen">
 </div>
+
+<!-- Modal de Felicitaciones -->
+<div id="modal-completado" class="modal">
+    <div class="modal-content animated">
+        <span id="cerrar-completado" class="close">&times;</span>
+        <h1>¡Felicidades!</h1>
+        <p>Has completado el rompecabezas en <span id="tiempo-completado"></span> segundos.</p>
+    </div>
+</div>
     
     <button id="btn">NUEVO JUEGO</button>
     <script src="Js/index.js"></script>
