--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Dificil/1.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Dificil/1.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nivel 1</title>
+    <title>Dificil</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 
