--- a/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Facil/facil.html
+++ b/PROYECTO-MJC memoorize/dificultad-rompe/menuNiveles/Facil/facil.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nivel Facil</title>
+    <link rel="icon" href="../../img/logo2.png">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 
@@ -17,45 +18,29 @@
             <img src="'../../../../img/logo2.png" alt="" srcset="">
         </div>
         <div class="container-nivel ">
-            <div class="row">
-                <div class="col-3">
                     <div class="nivel animacion unlocked">
-                        <a href="../../menuNiveles/Facil/Niveles/LEVEL 1/index.html" style="color: black;">
                         <h1 class="o-l">1</h1>
-                        <h6 class="ol-a">LEVEL </h6>
-                    </a>
+                        <h6 class="ol-a">LEVEL</h6>
                     </div>
-                </div>
-                <div class="col-3">
                     <div class="nivel animacion locked " >
-                        <a href="../../menuNiveles/Facil/Niveles/LEVEL 2/index.html"  style="color: black;"></a>
                         <h1 class="o-l">2</h1>
                         <h6 class="ol-a">LEVEL</h6>
-
                     </div>
-                </div>
-                <div class="col-3">
                     <div class="nivel animacion locked">
-                        <a href="../../Niveles/LEVEL 1/index.html"></a>
                         <h1 class="o-l">3</h1>
                         <h6 class="ol-a">LEVEL</h6>
                     </div>
-                </div>
-                <div class="col-3">
                     <div class="nivel animacion locked">
                         <h1 class="o-l">4</h1>
                         <h6 class="ol-a">LEVEL</h6>
                     </div>
-                </div>
             </div>
-
         </div>
         
                 </div>
             </div>
         </div>
     </div>
-
 </body>
     <script src="js/script.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
