--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 </head>
 <body>  
+    <div class="burbuja"></div>
     <div class="container-fluid">
         <audio id="miCancion" src="audio/sonidoFondo.mp3" preload="auto"></audio>
         
@@ -19,21 +20,20 @@
 
         <div class="col-12 centrar">
             <div class="col-4 m-auto">
-                <img class="imgLogo m-auto" src="img/logo/MJC.png" alt="">
+                <img class="imgLogo m-auto" src="img/logo2.png" alt="">
             </div>
-
             <div class="col-4 m-auto">
-                <center>   
-                    <a class="btn btnJugar m-auto" href="login/bar.html">
-                        <h3 class="btnText">
-                            JUGAR 
-                        </h3>  
+                <center>
+                    <a class="btn btnJugar m-auto" href="login/bar.html" onclick="createBubbles(event)">
+                        <h3 class="btnText">JUGAR</h3>  
+                        <div class="bubbles"></div> <!-- Contenedor de burbujas -->
                     </a>
                 </center>
             </div>
         </div>
     </div>
     <script src="js/sonido.js"></script>
+    <script src="js/burbujas.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>    
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
 </body>
