--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="img/logo/MJC.png" type="image/icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="css/icon.css">
 </head>
 <body>  
     <div class="burbuja"></div>
