--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -68,14 +68,14 @@
                     <div class="col-md-5 linea"></div>
                 </div>
                 <div class="col-12 row">
-                    <div class="col-md-4 logoRedes">
+                    <div class="col-4 logoRedes">
                         <img class="facebook" src="../img/icon/facebook.png" alt="">
                     </div>
-                    <div class="col-md-4 logoRedes">
+                    <div class="col-4 logoRedes">
                         <img class="gitHub" src="../img/icon/github.png" alt="">
                     </div>
-                    <div class="col-md-4 logoRedes">
-                        <img class="" src="../img/icon/google.png" alt="">
+                    <div class="col-4 logoRedes">
+                        <img class="email" src="../img/icon/google.png" alt="">
                     </div>
                 </div>
                 <div class="col-12">
