--- a/PROYECTO-MJC memoorize/login/resgistrate/bar.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/bar.html
@@ -11,8 +11,8 @@
     <div class="center col">
         <div>
             <center>
-                <img class="imgLogo" src="../../img/logo/MJC.png" alt="">
-            </center>   
+                <img class="logoI" src="../../img/logo/MJC.png" alt="">
+            </center>
         </div>
         <div class="m-auto" id="containere">
             <div id="loading-bar"></div>
