--- a/PROYECTO-MJC memoorize/menu/bar.html
+++ b/PROYECTO-MJC memoorize/menu/bar.html
@@ -11,7 +11,7 @@
     <div class="center col">
         <div>
             <center>
-                <img class="imgLogo" src="../img/logo/MJC.png" alt="">
+                <img class="logo" src="../img/logo/MJC.png" alt="">
             </center>   
         </div>
         <div class="m-auto" id="containere">
