--- a/PROYECTO-MJC memoorize/login/recuperar/bar.html
+++ b/PROYECTO-MJC memoorize/login/recuperar/bar.html
@@ -10,7 +10,7 @@
     <div class="center col">
         <div>
             <center>
-                <img class="imgLogo" src="../../img/logo/MJC.png" alt="">
+                <img class="logo" src="../../img/logo/MJC.png" alt="">
             </center>   
         </div>
         <div class="m-auto" id="containere">
