--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MJC memorize</title>
+    <link rel="shortcut icon" href="../img/logo2.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../css/modal.css">
     <link rel="stylesheet" href="../css/offcanvas.css">
     <link rel="stylesheet" href="../css/bar.css">
+    <link rel="stylesheet" href="../css/icon.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="../fontawesome-free-6.6.0-web/css/all.min.css">
 </head>   
@@ -15,14 +17,14 @@
     
     <div class="container-fluid main-container d-flex justify-content-center align-items-center">
         <div class="col-12 row">
-            <div class="col-1">                
-                <button id="playButton">
-                    <img class="imgSonido" src="../img/icon/noSonido.png" alt="">
+            <div class="col-1">   
+                <button id="home">
+                    <img class="imgConfiguracion" src="../img/icon/home.png" alt="">
                 </button>
-
-                <button id="usuarioBtn" data-bs-toggle="offcanvas" data-bs-target="#usuario" aria-controls="offcanvasExample">
-                    <img class="imgSonido" src="../img/icon/usuario.png" alt="">
-                </button>
+                <button id="configuracionBtn" data-bs-toggle="modal" data-bs-target="#configuracion" >
+                    <img class="imgConfiguracion" src="../img/icon/configuracion.png" alt="">
+                </button>             
+                
             </div>
             <div class="col-10">
                 <!-- Botones con imágenes dentro -->
@@ -52,8 +54,12 @@
                 </div>
             </div>
             <div class="col-1">
-                <button id="configuracionBtn" data-bs-toggle="modal" data-bs-target="#configuracion" >
-                    <img class="imgConfiguracion" src="../img/icon/configuracion.png" alt="">
+                <button id="playButton">
+                    <img class="imgSonido" src="../img/icon/noSonido.png" alt="">
+                </button>
+
+                <button id="usuarioBtn" data-bs-toggle="offcanvas" data-bs-target="#usuario" aria-controls="offcanvasExample">
+                    <img class="imgSonido" src="../img/icon/usuario.png" alt="">
                 </button>
             </div>
         </div>   
