--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -13,26 +13,30 @@
 <body>  
     <div class="burbuja"></div>
     <div class="container-fluid">
-        <audio id="miCancion" src="audio/sonidoFondo.mp3" preload="auto"></audio>
-        
-        <button id="playButton">
-            <img class="imgSonido" src="img/icon/noSonido.png" alt="">
-        </button>
-
-        <div class="col-12 centrar">
-            <div class="col-4 m-auto">
-                <img class="imgLogo m-auto" src="img/logo2.png" alt="">
+        <div class="col-12 row">
+            <div class="col-1">  
+                <button id="playButton">
+                    <img class="imgSonido" src="img/icon/noSonido.png" alt="">
+                </button>
             </div>
-            <div class="col-4 m-auto">
-                <center>
-                    <a class="btn btnJugar m-auto" href="login/bar.html" onclick="createBubbles(event)">
-                        <h3 class="btnText">JUGAR</h3>  
-                        <div class="bubbles"></div> <!-- Contenedor de burbujas -->
-                    </a>
-                </center>
+            <div class="col-10 centrar">
+                <div class="col-4 m-auto">
+                    <img class="imgLogo m-auto" src="img/logo2.png" alt="">
+                </div>
+                <div class="col-4 m-auto">
+                    <center>
+                        <button class="btn btnJugar m-auto" href="login/bar.html" onclick="createBubbles(event)">
+                            <h3 class="btnText">JUGAR</h3>  
+                            <div class="bubbles"></div> <!-- Contenedor de burbujas -->
+                        </button>
+                    </center>
+                </div>
             </div>
         </div>
     </div>
+
+    <audio id="miCancion" src="audio/sonidoFondo.mp3" preload="auto"></audio>
+
     <script src="js/sonido.js"></script>
     <script src="js/burbujas.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>    
