--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -7,9 +7,11 @@
     <title>MJC memorize</title>
     <link rel="icon" href="../img/logo/MJC.png" type="image/icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/icon.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
 <body>
+    <div class="burbuja"></div>
     <div class="container-fluid">
         <audio id="miCancion" src="../audio/sonidoFondo.mp3" preload="auto" loop></audio>
         
@@ -21,7 +23,7 @@
             <form action="" method="post" class="row g-3">
                 <div class="logoForm col-md-6">
                     <center>
-                        <img src="../img/logo/MJClogin.png" alt="">
+                        <img src="../img/logo2.png" alt="">
                     </center>
                     <h4 class="text">Inicio de Sesion</h4>
                 </div>
