--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="refresh" content="60">
     <title>MJC memorize</title>
-    <link rel="icon" href="../img/logo/MJC.png" type="image/icon">
+    <link rel="icon" href="../img/logo2.png" type="image/icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="../css/icon.css">
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
