--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -6,6 +6,7 @@
     <title>MJC memorize</title>
     <link rel="icon" href="../../img/logo/MJC.png" type="image/icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" href="../../css/icon.css">
     <link rel="stylesheet" href="../../bootstrap/css/bootstrap.css">
 </head>
 
@@ -18,7 +19,7 @@
         </button>
         <div class="col-12 row">
             <div class="col-6">
-                <img class="logo" src="../../img/logo/MJC.png" alt="">
+                <img class="logo" src="../../img/logo2.png" alt="">
             </div>
             <div id="formulario" class="col-6">
                 <form class="row g-3" action="send.php" method="post">}
@@ -70,7 +71,7 @@
                         <div class="col-md-5 linea"></div>
                     </div>
 
-                    <div class="col-12 row">
+                    <div class="col-12 row pb-3">
                         <div class="col-md-4 logoRedes">
                             <img class="facebook" src="../../img/icon/facebook.png" alt="">
                         </div>
