--- a/PROYECTO-MJC memoorize/login/recuperar/bar.html
+++ b/PROYECTO-MJC memoorize/login/recuperar/bar.html
@@ -5,16 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga</title>
     <link rel="stylesheet" href="css/bar.css">
+
 </head>
-<body>
+<body onload="simulateLoading()">
     <div class="center col">
         <div>
             <center>
-                <img class="logo" src="../../img/logo/MJC.png" alt="">
-            </center>   
+                <img class="logoI" src="../../img/logo2.png" alt="">
+            </center>
         </div>
-        <div class="m-auto" id="containere">
-            <div id="loading-bar"></div>
+        <div class="container center">
+            <div class="loading-bar">
+                <div class="wave wave1"></div>
+                <div class="wave wave2"></div>
+                <div class="wave wave3"></div>
+            </div>
         </div>
     </div>
 
