--- a/PROYECTO-MJC memoorize/login/resgistrate/bar.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/bar.html
@@ -7,15 +7,19 @@
     <link rel="stylesheet" href="css/bar.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onload="simulateLoading()">
     <div class="center col">
         <div>
             <center>
-                <img class="logoI" src="../../img/logo/MJC.png" alt="">
+                <img class="logoI" src="../../img/logo2.png" alt="">
             </center>
         </div>
-        <div class="m-auto" id="containere">
-            <div id="loading-bar"></div>
+        <div class="container center">
+            <div class="loading-bar">
+                <div class="wave wave1"></div>
+                <div class="wave wave2"></div>
+                <div class="wave wave3"></div>
+            </div>
         </div>
     </div>
 
