--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -21,7 +21,7 @@
                 <img class="logo" src="../../img/logo2.png" alt="">
             </div>
             <div id="formulario" class="col-6">
-                <form class="row g-3" action="send.php" method="post">}
+                <form class="row g-3" action="send.php" method="post">
                     <h4 class="text">Resgistrate</h4>
                     <div class="col-md-11 inputIcon">
                         <input type="text" class="form-control input" id="nombreUsuario" placeholder="usuario" required>
