--- a/PROYECTO-MJC memoorize/menu/bar.html
+++ b/PROYECTO-MJC memoorize/menu/bar.html
@@ -3,22 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barra de Carga</title>
+    <title>Barra de Carga con Olas y Logo</title>
     <link rel="stylesheet" href="css/bar.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body onload="simulateLoading()">
     <div class="center col">
         <div>
             <center>
-                <img class="logo" src="../img/logo/MJC.png" alt="">
-            </center>   
+                <img class="logoI" src="../img/logo2.png" alt="Logo del Juego">
+            </center>
         </div>
-        <div class="m-auto" id="containere">
-            <div id="loading-bar"></div>
+        <div class="container center">
+            <div class="loading-bar">
+                <div class="wave wave1"></div>
+                <div class="wave wave2"></div>
+                <div class="wave wave3"></div>
+            </div>
         </div>
     </div>
 
     <script src="js/bar.js"></script>
 </body>
-</html>     
+</html>
