--- a/PROYECTO-MJC memoorize/index.html
+++ b/PROYECTO-MJC memoorize/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
     <link rel="stylesheet" href="css/icon.css">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>  
     <div class="burbuja"></div>
@@ -34,7 +35,10 @@
             </div>
         </div>
     </div>
-
+</div>
+<div class="welcome-text">
+    <h1>¡Bienvenido!</h1>
+  </div>
     <audio id="miCancion" src="audio/sonidoFondo.mp3" preload="auto"></audio>
 
     <script src="js/sonido.js"></script>
