--- a/PROYECTO-MJC memoorize/juegos/quiz/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/index.html
@@ -94,6 +94,10 @@
         <source src="../audio/sonidoFondo.mp3" type="audio/mpeg">
     </audio>
 
+    <div id="aqui"></div>
+
+    <script src="js/main.js"></script>
+    <script src="js/word.jsonp"></script>
     <script src="js/sonido.js"></script>
     <script src="js/bar.js"></script>
     <script src="../../bootstrap/js/bootstrap.js"></script>
