--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <div class="burbuja"></div>
     <div class="container-fluid">
         <audio id="miCancion" src="../../audio/sonidoFondo.mp3" preload="auto" loop></audio>
         
