--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -32,7 +32,7 @@
                     <div class="col-auto">
                         <a href="../dificultad-rompe/index.html">
                         <button class="btn btn-custom game-button" onclick="navigateToGame(1)" style="margin-top: 200px; border: none;">
-                            <img src="img/logo2.png" alt="Juego 1" class="game-logo">
+                            <img src="img/54d0c318-c7f0-4437-b026-19a08853810c-Photoroom.png" alt="Juego 1" class="game-logo">
                             
                         </button>
                         </a>
