finalizacion del video juego

--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/index.html
@@ -8,22 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>
-        WORDLE|EN BUSCA DEL TESORO
-    </h1>
-    <main class="main-container">
-        <!--<h2 class="loading">cargando...</h2>-->
-        <div class="row" id="1">
-            <!--<input type="text" maxlength="1" class="square">-->
-        </div>
-    </main>
+    <div class="conteinerJuego">
+        <main class="main-container">
+            <!--<h2 class="loading">cargando...</h2>-->
+            <div class="row" id="1">
+                <!--<input type="text" maxlength="1" class="square">-->
+            </div>
+        </main>
+        <div class="result">
+            <!-- <p>ganaste!</p>
+             <button class="button">Reiniciar</button>-->
+         </div> 
+    </div>
+    
 
-    <div class="result">
-       <!-- <p>ganaste!</p>
-        <button class="button">Reiniciar</button>-->
-    </div> 
-
-    <script src="js/main.js"></script>
+    <script src="./js/main.js"></script>
     <script src="js/word.jsonp"></script>
 </body>
 </html>
