cambio en color de login

--- a/PROYECTO-MJC memoorize/login/index.html
+++ b/PROYECTO-MJC memoorize/login/index.html
@@ -24,7 +24,7 @@
                     <center>
                         <img src="../img/logo2.png" alt="">
                     </center>
-                    <h4 class="text">Inicio de Sesion</h4>
+                    <h4 class="text2">Inicio de Sesion</h4>
                 </div>
                 <div class="col-md-11 inputIcon">
                     <input type="email" class="form-control input" id="emailLogin" placeholder="Gmail" required>
