--- a/PROYECTO-MJC memoorize/login/recuperar/index.html
+++ b/PROYECTO-MJC memoorize/login/recuperar/index.html
@@ -23,10 +23,10 @@
                     <center>
                         <img src="../../img/logo2.png" alt="">
                     </center>
-                    <h4 class="text">Recuperar contraseña</h4>
+                    <h4 class="text2">Recuperar contraseña</h4>
 					
                 </div>
-				<p class="text">ingresa tu correo para validar la solicitud de cambio de contraseña</p>
+				<p class="text1">ingresa tu correo para validar la solicitud de cambio de contraseña</p>
                 <div class="col-md-11 inputIcon">
                     <input type="email" class="form-control input" id="emailLogin" placeholder="Gmail" required>
                     <span id="icon"> 
