--- a/PROYECTO-MJC memoorize/login/resgistrate/index.html
+++ b/PROYECTO-MJC memoorize/login/resgistrate/index.html
@@ -23,7 +23,7 @@
             </div>
             <div id="formulario" class="col-6">
                 <form class="row g-3" action="send.php" method="post">
-                    <h4 class="text">Resgistrate</h4>
+                    <h4 class="text2">Registro</h4>
                     <div class="col-md-11 inputIcon">
                         <input type="text" class="form-control input" id="nombreUsuario" placeholder="usuario" required>
                         <span id="icon"> 
