--- a/PROYECTO-MJC memoorize/menu/index.html
+++ b/PROYECTO-MJC memoorize/menu/index.html
@@ -33,21 +33,23 @@
             <div class="col-10">
                 <h1 id="titulo-juegos">Juegos</h1>
                 <div class="row justify-content-center scrolle">
-                    <div class="col-auto">
+                    <div class="col-auto game-container">
                         <a href="../dificultad-rompe/index.html">
                             <button class="btn btn-custom game-button" onclick="navigateToGame(1)" style="margin-top: 150px; border: none;">
-                                <img src="img/54d0c318-c7f0-4437-b026-19a08853810c-Photoroom.png" alt="Juego 1" class="game-logo logoI">
+                                <img src="img/54d0c318-c7f0-4437-b026-19a08853810c-Photoroom.png" alt="Juego 1" class="game-logo logoI" id="game1">
                             </button>
                         </a>
+                        <div class="game-description" id="desc1">Un divertido juego de rompecabezas.</div>
                     </div>
-                    <div class="col-auto"></div>
-                    <div class="col-auto">
+                    <div class="col-auto game-container">
                         <a href="../juegos/quiz/bar.html">
                             <button class="btn btn-custom game-button" onclick="navigateToGame(3)" style="margin-top: 150px; border: none;"> 
-                                <img src="../menu/img/logonumero.png" alt="Juego 3" class="game-logo">
+                                <img src="../menu/img/logonumero.png" alt="Juego 2" class="game-logo" id="game2">
                             </button>
                         </a>
+                        <div class="game-description" id="desc2">Un emocionante juego de numeros.</div>
                     </div>
+                    
                 </div>
             </div>
             <div class="col-1">
