charry actualizo img rompe

--- a/PROYECTO-MJC memoorize/rompecabezas-prueba/puzzle.html
+++ b/PROYECTO-MJC memoorize/rompecabezas-prueba/puzzle.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>AQUAC-MEMORY</title>
+    <link rel="icon" href="images/rompe.jpeg" type="image/icon">
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/image-puzzle.css" rel="stylesheet" />
     <script src="js/jquery-2.1.1.min.js"></script>
@@ -48,15 +49,16 @@
                 TIEMPO <span class="timeCount">0</span> SEG<br />
                 <div>
                     <button type="button" onclick="window.location.reload(true);">JUGAR DE NUEVO</button>
+                    
                 </div>
             </div>
         </div>
 
         <script>
             var images = [
-                { src: 'images/submarino.jpg', title: 'Submarino' },
+                { src: 'images/subamarino.jpeg', title: 'Submarino' },
                 { src: 'images/barco.jpg', title: 'Barco Pirata' },
-                { src: 'images/cangre.jpg', title: 'Cangrejo Pirata' },
+                { src: 'images/tiburon.jpeg', title: 'Cangrejo Pirata' },
                 { src: 'images/pulpo.jpeg', title: 'Pulpo' },
                 { src: 'images/pulpa.jpeg', title: 'Fondo Del Mar' }
             ];
@@ -82,5 +84,6 @@
             }
         </script>
     </div>
+
 </body>
 </html>
